--- a/package.json
+++ b/package.json
@@ -1,14 +1,67 @@
 {
+  "name": "onedash",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "antd": "^3.2.1",
+    "apollo-cache-inmemory": "^1.1.1",
+    "apollo-client-preset": "^1.0.3",
+    "apollo-link": "1.0.7",
+    "apollo-link-context": "1.0.3",
+    "apollo-link-error": "1.0.3",
+    "bs-platform": "^2.1.0",
+    "bs-webapi": "0.8.1",
+    "bugsnag-js": "^4.2.0",
+    "classnames": "^2.2.5",
+    "codemirror": "5.33.0",
+    "codemirror-graphql": "0.6.12",
+    "copy-to-clipboard": "^3.0.8",
+    "flow-bin": "^0.61.0",
+    "graphiql": "^0.11.11",
+    "graphql": "^0.11.7",
+    "graphql-tag": "^2.5.0",
+    "marked": "^0.3.5",
+    "node-sass-chokidar": "0.0.3",
+    "npm-run-all": "^4.1.2",
+    "onegraph-apollo-client": "0.1.23",
+    "onegraph-auth": "^0.1.23",
+    "onegraph-stripe-connect": "0.1.22",
+    "react": "^16.2.0",
+    "react-apollo": "2.1.0-beta.2",
+    "react-dom": "^16.2.0",
+    "react-joyride": "1.11.1",
+    "react-markdown": "^3.1.4",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
+    "react-scripts": "1.0.17",
+    "react-share": "2.0.0",
+    "reason-react": "0.3.1"
+  },
   "scripts": {
-    "examples": "docusaurus-examples",
-    "start": "docusaurus-start",
-    "build": "docusaurus-build",
-    "publish-gh-pages": "docusaurus-publish",
-    "write-translations": "docusaurus-write-translations",
-    "version": "docusaurus-version",
-    "rename-version": "docusaurus-rename-version"
+    "build-css": "node-sass-chokidar src/App.scss -o src/css/",
+    "watch-css": "yarn run build-css && node-sass-chokidar src/App.scss -o src/css/ --watch",
+    "start-js": "react-app-rewired start",
+    "build-js": "export REACT_APP_GIT_SHA=`git rev-parse HEAD` && react-app-rewired build",
+    "start": "npm-run-all -p start-js watch-reason",
+    "test": "react-app-rewired test --env=jsdom",
+    "build": "npm-run-all build-js",
+    "eject": "react-app-rewired eject",
+    "prettier": "prettier --write \"src/**/*.js\"",
+    "flow": "flow",
+    "build-reason": "bsb -make-world -clean-world",
+    "watch-reason": "bsb -make-world -clean-world -w"
+  },
+  "prettier": {
+    "singleQuote": true,
+    "trailingComma": "all",
+    "bracketSpacing": false,
+    "jsxBracketSameLine": true,
+    "printWidth": 80
   },
   "devDependencies": {
-    "docusaurus": "^1.0.7"
+    "babel-plugin-import": "^1.6.4",
+    "prettier": "^1.8.2",
+    "react-app-rewire-less": "^2.1.0",
+    "react-app-rewired": "^1.4.1"
   }
 }
